--- a/project2/Cargo.toml
+++ b/project2/Cargo.toml
@@ -1,8 +1,18 @@
 [package]
-name = "project2"
+name = "kvs"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.4.8", features = ["derive"] }
+serde = "1.0.192"
+serde_json = "1.0.108"
+thiserror = "1.0.50"
+
+[dev-dependencies]
+assert_cmd = "0.11.0"
+predicates = "1.0.0"
+tempfile = "3.0.7"
+walkdir = "2.2.7"
