project2 compact plan

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "rust-analyzer.linkedProjects": [
         "project1/Cargo.toml",
         "project2/Cargo.toml"
-    ]
+    ],
+    "commentTranslate.targetLanguage": "zh-CN"
 }
