--- a/project2/Cargo.toml
+++ b/project2/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.8", features = ["derive"] }
 serde = "1.0.192"
+serde_derive  = "1.0.193"
 serde_json = "1.0.108"
 thiserror = "1.0.50"
 
