--- a/project4/Cargo.toml
+++ b/project4/Cargo.toml
@@ -22,11 +22,9 @@ tracing-subscriber = "0.3.18"
 [dev-dependencies]
 assert_cmd = "0.11"
 criterion = "0.3"
+crossbeam-utils = "0.6.5"
 predicates = "1.0.0"
 rand = "0.6.5"
 tempfile = "3.0.7"
 walkdir = "2.2.7"
-
-[[bench]]
-name = "engine_bench"
-harness = false
+panic-control = "0.1.4"
