--- a/project4/Cargo.toml
+++ b/project4/Cargo.toml
@@ -18,13 +18,20 @@ sled = "0.34.7"
 anyhow = "1.0.75"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+rayon = "1.8.0"
+crossbeam-channel = "0.5.8"
 
 [dev-dependencies]
 assert_cmd = "0.11"
 criterion = "0.5.1"
-crossbeam-utils = "0.6.5"
+crossbeam-utils = "0.8.16"
 predicates = "1.0.0"
 rand = "0.6.5"
 tempfile = "3.0.7"
 walkdir = "2.2.7"
 panic-control = "0.1.4"
+
+
+[[bench]]
+name = "thread_bench"
+harness = false
