--- a/project4/Cargo.toml
+++ b/project4/Cargo.toml
@@ -20,6 +20,8 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 rayon = "1.8.0"
 crossbeam-channel = "0.5.8"
+num_cpus = "1.16.0"
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 assert_cmd = "0.11"
