--- a/project4/Cargo.toml
+++ b/project4/Cargo.toml
@@ -22,6 +22,7 @@ rayon = "1.8.0"
 crossbeam-channel = "0.5.8"
 num_cpus = "1.16.0"
 lazy_static = "1.4.0"
+crossbeam-skiplist = "0.1.1"
 
 [dev-dependencies]
 assert_cmd = "0.11"
